--- a/index.html
+++ b/index.html
@@ -39,25 +39,13 @@
             <a class="action_container" href="pages/bag.html">
                 <span class="material-symbols-outlined action_icon">shopping_bag</span>
                 <span class="action_name">Bag</span>
+                <span class="bag-item-count">0</span>
             </a>
         </div>
     </header>
     <main>
         <div class="items-container">
-            <div class="item-container">
-                <img class="item-image" src="images/1.jpg" alt="1.jpg">
-                <div class="rating">
-                    4.5⭐ | 1.4k
-                </div>
-                <div class="company-name">Carlton London</div>
-                <div class="item-name">Rhodium-Plated CZ Floral Studs</div>
-                <div class="price">
-                    <span class="current-price">Rs 606</span>
-                    <span class="original-price">Rs 1045</span>
-                    <span class="discount">(42% off)</span>
-                </div>
-                <button class="btn-add-bag">Add to Bag</button>
-            </div>
+
         </div>
     </main>
     <footer>
@@ -104,6 +92,10 @@
             © 2023 www.myntra.com. All rights reserved.
         </div>
     </footer>
+
+
+    <script src="data/items.js"></script>
+    <script src="scripts/index.js"></script>
 </body>
 
 </html>
